--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BakeryAdminApp</title>
+  <title>Bakery Administration</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/sys-images/bakery-logo.JPG">
 </head>
 <body style="height: 100%;">
   <app-root></app-root>
